1.7.0
-----
1. Player icons.
2. Remove 'Synchronise' from players menu, accessible from 'Manage players'
   dialog.

1.6.1
-----
 1. Improve Adwaita (Linux) scrollbars.
 2. Show shutdown and restart actions in server settings toolbar if called from
    information dialog.
 3. Move player 'Extra settings', and custom actions, into menu in 'Player
    settings' dialog toolbar.
 4. Move 'Set sleep time for all players' and 'Create group' into menu in
    'Manage players' dialog toolbar.
 5. Only show DSTM dialog on longpress if DSTM is currently active.
 6. Remove outer scrollbar on DSTM dialog.
 7. Fix font-weight of text items in browse list.
 8. Update translations.
 9. Translate 'Dark' part of theme names.
10. Always add custom actions to 'Player settings' dialog.
11. If fail to load theme CSS file, fallback to 'dark.css'
12. When launching mini-player take device pixel ratio into account so that
    correct size window is created.
13. Slightly increase width of mini-player so that epiphany does not start in
    its mobile layout.
14. Adjust mni-player size after opening, fixes size with Firefox.
15. Fix volume display in mini-player when too narrow for toolbar volume slider.
16. Fix 'Synchronise' option not appearing in player menu in 'Manage players'
    dialog.
17. Show group members under group player in 'Manage players' dialog when group
    is active.
18. When playing/pausing/stoping playback on a group refresh status of all
    members every 250ms for 1 second.
19. When updating group player status in 'Manage players', if the number of
    members has changed, refresh new and old members.
20. Don't list group players in sync dialog.
21. Remove 'Synchronise' from player menu of group players in 'Manage players'
    dialog.
22. Disable 'Synchronise' in players menu if current player is a group.
23. Enable image grid for "home_menu" window style.
24. Add dummy SVG image incase grid item has no icon and no image.