@@ -3,6 +3,7 @@
 1. Player icons.
 2. Remove 'Synchronise' from players menu, accessible from 'Manage players'
    dialog.
+3. Move listing of players on other servers into 'Manage players' dialog.
 
 1.6.1
 -----
